fix强冷模式bug,添加了风扇同速设置开关

--- a/src/data/fan_config.json
+++ b/src/data/fan_config.json
@@ -24,8 +24,9 @@
         83
     ],
     "LowTempThreshold": 20,
-    "CurrentFanMode": "auto",
-    "IsCustomMode": false,
+    "CurrentFanMode": "manual",
+    "IsCustomMode": true,
     "IsFullMode": false,
-    "LastNonFullMode": "manual"
+    "LastNonFullMode": "manual",
+    "SameSpeed": true
 }
