--- a/src/data/fan_config.json
+++ b/src/data/fan_config.json
@@ -1,42 +1,42 @@
 {
     "CpuFans": [
         0,
-        38,
-        38,
-        38,
-        38,
-        47,
-        55,
-        64,
-        74,
-        83
+        31,
+        31,
+        32,
+        31,
+        35,
+        37,
+        41,
+        50,
+        100
     ],
     "GpuFans": [
         0,
-        38,
-        38,
-        38,
-        38,
-        47,
-        55,
-        64,
-        74,
-        83
+        4,
+        7,
+        8,
+        9,
+        12,
+        17,
+        20,
+        39,
+        100
     ],
     "LowTempThreshold": 20,
-    "CurrentFanMode": "manual",
-    "IsCustomMode": true,
+    "CurrentFanMode": "auto",
+    "IsCustomMode": false,
     "IsFullMode": false,
     "LastNonFullMode": "manual",
-    "SameSpeed": false,
+    "SameSpeed": true,
     "Keyboard": [
-        "呼吸",
-        "#00ff40",
+        "渐变",
+        "#00ff80",
         "亮度4"
     ],
     "Led": [
-        "呼吸",
-        "#ff0080",
+        "渐变",
+        "#80ff80",
         "亮度4"
     ],
     "WinLock": true,
